# bevy_brp_mcp

./: .gitignore  .todo.json  ARCHIVE_NOTICE.md  BRP_METHODS.md  BRP_REGISTRATION.md  CHANGELOG.md  Cargo.toml  README.md  clippy_output_temp.txt  rustfmt.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
docs/: claude-streaming-guide.md
help/brp_tools/: brp_extras_set_debug_mode.txt
help_text/: bevy_brp_mcp_info.txt
help_text/app_tools/: brp_launch_bevy_app.txt  brp_launch_bevy_example.txt  brp_list_bevy_apps.txt  brp_list_bevy_examples.txt  brp_list_brp_apps.txt  launch_bevy_app.txt  list_bevy_examples.txt  list_brp_apps.txt
help_text/brp_tools/: bevy_destroy.txt  bevy_get.txt  bevy_get_resource.txt  bevy_get_watch.txt  bevy_insert.txt  bevy_insert_resource.txt  bevy_list.txt  bevy_list_active_watches.md  bevy_list_resources.txt  bevy_list_watch.txt  bevy_mutate_component.txt  bevy_mutate_resource.txt  bevy_query.txt  bevy_registry_schema.txt  bevy_remove.txt  bevy_remove_resource.txt  bevy_reparent.txt  bevy_rpc_discover.txt  bevy_screenshot.txt  bevy_spawn.txt  bevy_stop_watch.md  brp_destroy.txt  brp_execute.txt  brp_extras_discover_format.txt  brp_extras_list_key_codes.txt  brp_extras_screenshot.txt  brp_extras_send_keys.txt  brp_extras_set_debug_mode.txt  brp_extras_shutdown.txt  brp_get.txt  brp_get_resource.txt  brp_get_watch.md  brp_get_watch.txt  brp_list.txt  brp_list_active_watches.txt  brp_list_watch.md  brp_list_watch.txt  brp_mutate_component.txt  brp_mutate_resource.txt  brp_query.txt  (+7 more)
help_text/log_tools/: brp_cleanup_logs.txt  brp_list_logs.txt  brp_read_log.txt  cleanup_logs.txt
help_text/tools/: brp_list.txt  brp_query.txt  launch_bevy_app.txt  launch_bevy_example.txt  list_bevy_examples.txt
help_text_files/: server_instructions.txt
help_text_files/tools/: launch.txt  list_bevy_apps.txt
src/: app.rs  brp.rs  cargo.rs  cargo_detector.rs  constants.rs  detached.rs  error.rs  main.rs  peer_manager.rs  registry.rs  tool_definitions.rs  tool_generator.rs  tools.rs  types.rs  watch_manager.rs
src/app_tools/: brp_extras_shutdown.rs  brp_launch_bevy_app.rs  brp_launch_bevy_example.rs  brp_list_bevy_apps.rs  brp_list_bevy_examples.rs  brp_list_brp_apps.rs  constants.rs  launch_app.rs  launch_example.rs  list_apps.rs  list_brp_apps.rs  list_examples.rs  mod.rs
src/app_tools/support/: cargo_detector.rs  launch_common.rs  logging.rs  mod.rs  process.rs  scanning.rs
src/brp_tools/: bevy_list_active_watches.rs  bevy_screenshot.rs  bevy_shutdown.rs  bevy_stop_watch.rs  brp_destroy.rs  brp_execute.rs  brp_get.rs  brp_get_resource.rs  brp_get_watch.rs  brp_insert.rs  brp_insert_resource.rs  brp_list.rs  brp_list_components.rs  brp_list_resources.rs  brp_list_watch.rs  brp_mutate_component.rs  brp_mutate_resource.rs  brp_query.rs  brp_registry_schema.rs  brp_remove.rs  brp_remove_resource.rs  brp_reparent.rs  brp_rpc_discover.rs  brp_set_debug_mode.rs  brp_spawn.rs  brp_status.rs  check_brp.rs  constants.rs  mod.rs  tool_definitions.rs  tool_generator.rs
src/brp_tools/request_handler/: config.rs  extractors.rs  handler.rs
src/brp_tools/request_handler/format_discovery/: constants.rs  detection.rs  engine.rs  mod.rs  path_parser.rs  tests.rs  transformations.rs  transformers.rs  utilities.rs
src/brp_tools/request_handler/format_discovery/phases/: context.rs  error_analysis.rs  initial_attempt.rs  mod.rs  result_building.rs  tier_execution.rs
src/brp_tools/request_handler/format_discovery/transformers/: common.rs  (+5 more)
src/brp_tools/support/: brp_client.rs  builder.rs  configurable_formatter.rs  formatting.rs  generic_handler.rs  http_client.rs  json_rpc_builder.rs  mod.rs  request_handler.rs  response_builder.rs  response_formatter.rs  response_processor.rs  serialization.rs  simple_pagination.rs  utils.rs  watch_logger.rs  watch_logger_optimized.rs  watch_manager.rs  watch_response.rs  watch_task.rs
src/brp_tools/support/request_handler/: config.rs  constants.rs  extractors.rs  format_discovery.rs  handler.rs  mod.rs  traits.rs
src/brp_tools/watch/: bevy_get_watch.rs  bevy_list_watch.rs  brp_list_active.rs  brp_stop_watch.rs  mod.rs
src/brp_tools/watch/support/: logger.rs  manager.rs  mod.rs  response.rs  task.rs
src/log_tools/: cleanup_logs.rs  constants.rs  list_logs.rs  mod.rs  read_log.rs  support.rs
src/log_tools/support/: log_utils.rs  mod.rs
src/prompts/: discover_methods.rs  mod.rs  support.rs
src/support/: debug_tools.rs  mod.rs  params.rs  response.rs  schema.rs  serialization.rs  service.rs
src/tools/: brp_execute.rs  brp_list_components.rs  check_brp.rs  cleanup.rs  cleanup_logs.rs  launch.rs  launch_app.rs  launch_example.rs  list_apps.rs  list_examples.rs  list_logs.rs  logs.rs  mod.rs  read_log.rs  registry.rs  status.rs  stop.rs  support.rs
src/tools/support/: formatting.rs  mod.rs  params.rs  process.rs  response.rs  schema.rs  service.rs
(+9 files in other folders)
