[package]
authors       = ["natepiano <slicks.curable.0k@icloud.com>"]
categories    = ["development-tools", "game-development"]
description   = "MCP server for Bevy Remote Protocol (BRP) integration"
documentation = "https://github.com/yourusername/bevy_brp_mcp"
edition       = "2024"
homepage      = "https://github.com/yourusername/bevy_brp_mcp"
keywords      = ["bevy", "brp", "mcp", "protocol", "remote"]
license       = "MIT OR Apache-2.0"
name          = "bevy_brp_mcp"
readme        = "README.md"
repository    = "https://github.com/yourusername/bevy_brp_mcp"
version       = "0.1.0"

[dependencies]
bevy = { version = "0.16.1", default-features = false, features = [
  "bevy_remote",
] }

anyhow             = "1.0"
cargo_metadata     = "0.20"
chrono             = "0.4"
reqwest            = { version = "0.12", features = ["json"] }
rmcp               = { version = "0.1.5", features = ["server", "transport-io"] }
serde              = { version = "1.0", features = ["derive"] }
serde_json         = "1.0.140"
sysinfo            = "0.35.2"
thiserror          = "2.0.12"
tokio              = { version = "1.45.1", features = ["full"] }
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
