[package]
authors       = ["natepiano <slicks.curable.0k@icloud.com>"]
categories    = ["development-tools", "game-development"]
description   = "MCP server for Bevy Remote Protocol (BRP) integration"
documentation = "https://github.com/yourusername/bevy_brp_mcp"
edition       = "2024"
homepage      = "https://github.com/yourusername/bevy_brp_mcp"
keywords      = ["bevy", "brp", "mcp", "protocol", "remote"]
license       = "MIT OR Apache-2.0"
name          = "bevy_brp_mcp"
readme        = "README.md"
repository    = "https://github.com/yourusername/bevy_brp_mcp"
version       = "0.1.0"

[dependencies]
bevy = { version = "0.16.1", default-features = false, features = [
  "bevy_remote",
] }

anyhow             = "1.0"
cargo_metadata     = "0.20"
chrono             = "0.4"
futures            = "0.3"
once_cell          = "1.21.3"
regex              = "1.11.1"
reqwest            = { version = "0.12", features = ["json", "stream"] }
rmcp               = { version = "0.1.5", features = ["server", "transport-io"] }
serde              = { version = "1.0", features = ["derive"] }
serde_json         = "1.0.140"
sysinfo            = "0.35.2"
thiserror          = "2.0.12"
tokio              = { version = "1.45.1", features = ["full", "signal"] }
tokio-stream       = "0.1.17"
tokio-util         = { version = "0.7", features = ["codec"] }
tracing            = "0.1.41"
tracing-appender   = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid               = { version = "1.17.0", features = ["v4"] }
