[package]
authors     = ["natepiano <slicks.curable.0k@icloud.com>"]
categories  = ["development-tools", "game-development"]
description = "MCP server for Bevy Remote Protocol (BRP) integration"
edition     = "2024"
keywords    = ["bevy", "brp", "mcp", "protocol", "remote"]
license     = "MIT OR Apache-2.0"
name        = "bevy_brp_mcp"
readme      = "README.md"
repository  = "https://github.com/natepiano/bevy_brp_mcp"
version     = "0.2.1"

[dependencies]
bevy = { version = "0.16.1", default-features = false, features = [
  "bevy_remote",
] }

anyhow             = "1.0"
cargo_metadata     = "0.20"
chrono             = "0.4"
error-stack        = { version = "0.5.0", features = ["spantrace"] }
futures            = "0.3"
libc               = "0.2"
once_cell          = "1.21.3"
paste              = "1.0"
regex              = "1.11.1"
reqwest            = { version = "0.12", features = ["json", "stream"] }
rmcp               = { version = "0.1.5", features = ["server", "transport-io"] }
serde              = { version = "1.0", features = ["derive"] }
serde_json         = "1.0.140"
sysinfo            = "0.35.2"
thiserror          = "2.0.12"
tokio              = { version = "1.45.1", features = ["full", "signal"] }
tokio-stream       = "0.1.17"
tokio-util         = { version = "0.7", features = ["codec"] }
tracing            = "0.1.41"
tracing-appender   = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid               = { version = "1.17.0", features = ["v4"] }

[lints.rust]
missing_docs = "deny"

[lints.clippy]
# Our strict lints
expect_used = "deny"
panic       = "deny"
unwrap_used = "deny"

# Enable lint groups as errors (with lower priority so allows can override)
all      = { level = "deny", priority = -1 }
cargo    = { level = "deny", priority = -1 }
nursery  = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }

# Allow specific lints that conflict with Bevy patterns
multiple_crate_versions = "allow"
